--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.5",
+    "dayjs": "^1.11.10",
     "i18next": "^23.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
